# arpha

./: CMakeLists.txt  README  README.md  arpha.h  ast.cpp  ast.h  common.h  compiler.h  declarations.cpp  declarations.h  evaluate.cpp  interpreter.cpp  main.cpp  parser.cpp  parser.h  scope.cpp  scope.h
arpha/: operators.arp
cmake/Modules/: FindLLVM.cmake
samples/: 99bottles.arp  algs.arp  clib1.arp  clib2.arp  construction_destruction.arp  for.arp  greet.arp  hello.arp  printable.arp  simple_variant.arp  unittest.arp  winapi.arp
spec/: fields.arp  for.arp  function.arp  if.arp  lexical.arp  literals.arp  loops.arp  misc.arp  spec.arp  subtyping.arp  type.arp  variable.arp
src/: arpha.h  ast.cpp  ast.h  common.h  compiler.h  declarations.cpp  declarations.h  evaluate.cpp  interpreter.cpp  interpreter.h  main.cpp  parser.cpp  parser.h  scope.cpp  scope.h
src/ast/: analyze.cpp  analyze.h  declarations.cpp  declarations.h  evaluate.cpp  evaluate.h  interpret.cpp  interpret.h  intrinsic_bindings.cpp  node.cpp  node.h  operation_evaluator.cpp  optimize.cpp  resolve.cpp  resolve.h  scope.cpp  scope.h  totext.cpp  type.cpp  type.h  unresolved.cpp  visitor.h
src/backend/: c.cpp  c.h
src/base/: base.cpp  base.h  bigint.cpp  bigint.h  format.cpp  format.h  location.cpp  location.h  memory.cpp  memory.h  symbol.cpp  symbol.h  system.cpp  system.h  utf.cpp  utf.h
src/data/: data.h
src/intrinsics/: ast.cpp  ast.h  compiler.cpp  compiler.h  types.cpp  types.h
src/syntax/: arpha.cpp  ast.cpp  ast.h  astvisitor.h  lexer.cpp  lexer.h  location.h  parser.cpp  parser.h  token.cpp  token.h
src/testing/: tests.cpp
testsuites/: delayedSpecializationResolving.arp  rndSeq.arp
